<resources>
  <string name="app_name">Group-6</string>
  <string name="find_recipes">Find Recipes</string>
  <string name="firebase_assignment">Firebase Assignment</string>
  <string name="group_6">Group - 6</string>
  <string name="search_query">What are you looking for?</string>
  <string name="select_cuisines">Select Cuisines you want to include...</string>
  <string name="select_excluded_cuisines">Select Cuisines you want to exclude...</string>
  <string name="select_diet">Select Diet</string>
  <string name="select_intolerance">Select ingredients you cannot tolerate...</string>
  <string name="select_meal_type">Select Meal Type</string>
  <string name="max_ready_time">Max Ready Time: </string>
  <string name="min_servings">Min Servings: </string>
  <string name="max_servings">Max Servings: </string>
  <string name="number_of_recipes">No. of recipes you want to see</string>
  <string name="enter_number_of_recipes">Number of recipes: </string>
  <string name="select_your_meal_type">Select Your Meal Type: </string>
  <string name="select_your_diet">Select Your Diet: </string>
  <string name="select_cuisine_types">Select Cuisine Types: </string>
  <string name="select_excluded_cuisine_types">Select Excluded Cuisine Types: </string>
  <string name="enter_the_search_query">Enter the search query: </string>
  <string name="select_intolerances">Select Intolerances: </string>
  <string name="recipe_title">Recipe Title</string>
  <string name="recipe_image">Recipe Image</string>
  <string name="recipe_search_results">Recipe Search Results</string>
  <string name="found_recipes_for_your_search">Found recipes for your search</string>
  <string name="no_recipes_found">No Recipes Found</string>
  <string name="try_adjusting_your_search_criteria_nand_search_again">Try adjusting your search criteria\nand search again</string>
  <string name="search_again">Search Again</string>
  <string name="about_group">About Group</string>
  <string name="group_members">Group 6 Members</string>
  <string name="ved_dipak_deore">Ved Dipak Deore</string>
  <string name="vicky_daniel_amalan">Vicky Daniel Amalan</string>
  <string name="shivam_sah">Shivam Sah</string>
  <string name="sign_in">Sign In</string>
  <string name="sign_up">Sign Up</string>
  <string name="enter_username">Enter Username</string>
  <string name="enter_first_name">First Name</string>
  <string name="enter_last_name">Last Name</string>
  <string name="submit">Submit</string>
  <string name="already_a_member">Already a member?</string>
  <string name="join_community">Join the community</string>
  <string name="sticker_chat_app">Sticker Chat App</string>
  <string name="send_sticker">Send Sticker</string>
  <string name="sticker_received_history">Sticker Received History</string>
  <string name="sticker_sent_history">Sticker Sent History</string>
  <string name="select_user_prompt">Choose a user to send sticker to</string>
  <string name="sticker_notification_channel">Sticker Notification Channel</string>
  <string name="sticker_notification_channel_description">This channel is used to send notifications about sticker app</string>
  <string name="sticker_notification_channel_id">Sticker_Notification_Channel_ID</string>
  <string name="cat">Cat</string>
  <string name="horse">Horse</string>
  <string name="cow">Cow</string>
  <string name="sheep">Sheep</string>
  <string name="flamingo">Flamingo</string>
  <string name="crocodile">Crocodile</string>
  <string name="count">Count: %d</string>
  <string name="logout">Logout</string>
  <string name="send">Send</string>
  <string name="select_sticker">Select Sticker</string>
</resources>