<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/main"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".activities.StickerAppHomeActivity">

  <!-- The TextView to display the title of the Sticker Chat App -->
  <TextView
    android:id="@+id/stickerChatAppTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/sticker_chat_app"
    android:textStyle="bold"
    android:textSize="30dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/sendStickerButton"/>

  <!-- The Button to send a sticker -->
  <Button
    android:id="@+id/sendStickerButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/send_sticker"
    android:onClick="onSendStickerActivity"
    app:layout_constraintTop_toBottomOf="@id/stickerChatAppTitle"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/stickerReceivedHistoryButton"/>

  <!-- The Button to view received sticker history -->
  <Button
    android:id="@+id/stickerReceivedHistoryButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/sticker_received_history"
    android:onClick="onStickerReceivedHistoryActivity"
    app:layout_constraintTop_toBottomOf="@id/sendStickerButton"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/stickerSentHistoryButton"/>

  <!-- The Button to view sent sticker history -->
  <Button
    android:id="@+id/stickerSentHistoryButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/sticker_sent_history"
    android:onClick="onStickerSentHistoryActivity"
    app:layout_constraintTop_toBottomOf="@id/stickerReceivedHistoryButton"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/logoutButton"/>

  <Button
    android:id="@+id/logoutButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/logout"
    android:onClick="onLogout"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/stickerSentHistoryButton"
    app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>