<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fillViewport="true"
  android:id="@+id/main"
  tools:context=".activities.FoodRecipeRequestActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <!-- ConstraintLayout to hold the complex search layout -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/complex_search_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

        <!-- Query -->
        <TextView
            android:id="@+id/query_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_the_search_query"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/query"/>

      <EditText
            android:id="@+id/query"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="Search Query"
            android:hint="@string/search_query"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@id/cuisine_selector_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/query_label" />

        <!-- Cuisine Selector -->
        <TextView
          android:id="@+id/cuisine_selector_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/select_cuisine_types"
          android:layout_marginTop="20dp"
          app:layout_constraintTop_toBottomOf="@id/query"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintBottom_toTopOf="@id/cuisine_selector"/>

    <TextView
      android:id="@+id/cuisine_selector"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:padding="12dp"
      android:background="@android:drawable/editbox_background"
      android:clickable="true"
      android:ellipsize="none"
      android:focusable="false"
      android:hint="@string/select_cuisines"
      android:singleLine="true"
      app:layout_constraintBottom_toTopOf="@id/excluded_cuisine_selector_label"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/cuisine_selector_label" />

    <!-- Excluded Cuisine Selector -->
    <TextView
      android:id="@+id/excluded_cuisine_selector_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/select_excluded_cuisine_types"
      android:layout_marginTop="20dp"
      app:layout_constraintTop_toBottomOf="@id/cuisine_selector"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintBottom_toTopOf="@id/excluded_cuisine_selector"/>

    <TextView
      android:id="@+id/excluded_cuisine_selector"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:padding="12dp"
      android:background="@android:drawable/editbox_background"
      android:clickable="true"
      android:ellipsize="none"
      android:focusable="false"
      android:hint="@string/select_excluded_cuisines"
      android:singleLine="true"
      app:layout_constraintBottom_toTopOf="@id/spacer1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/excluded_cuisine_selector_label" />

    <View
      android:id="@+id/spacer1"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:visibility="invisible"
      app:layout_constraintBottom_toTopOf="@id/diet_selector"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHeight_percent="0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/excluded_cuisine_selector" />

    <!-- Diet -->
    <TextView
      android:id="@+id/diet_selector_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/select_your_diet"
      android:layout_marginEnd="8dp"
      app:layout_constraintTop_toBottomOf="@id/spacer1"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toStartOf="@id/diet_selector"
      app:layout_constraintBottom_toTopOf="@id/intolerance_selector_label"/>

    <Spinner
      android:id="@+id/diet_selector"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:prompt="@string/select_diet"
      android:layout_marginTop="20dp"
      app:layout_constraintBottom_toTopOf="@id/intolerance_selector_label"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/diet_selector_label"
      app:layout_constraintTop_toBottomOf="@id/spacer1" />

    <!-- Intolerances Selector -->
    <TextView
      android:id="@+id/intolerance_selector_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/select_intolerances"
      android:layout_marginTop="20dp"
      app:layout_constraintTop_toBottomOf="@id/diet_selector"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintBottom_toTopOf="@id/intolerance_selector"/>

    <TextView
      android:id="@+id/intolerance_selector"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:padding="12dp"
      android:background="@android:drawable/editbox_background"
      android:clickable="true"
      android:ellipsize="none"
      android:focusable="false"
      android:hint="@string/select_intolerance"
      android:singleLine="true"
      app:layout_constraintBottom_toTopOf="@id/spacer3"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/intolerance_selector_label" />

    <View
      android:id="@+id/spacer3"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:visibility="invisible"
      app:layout_constraintBottom_toTopOf="@id/meal_type_selector"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHeight_percent="0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/intolerance_selector" />

    <!-- Meal Types -->
    <TextView
      android:id="@+id/meal_type_selector_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/select_your_meal_type"
      android:layout_marginEnd="8dp"
      android:layout_marginTop="20dp"
      app:layout_constraintTop_toBottomOf="@id/spacer3"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toStartOf="@id/meal_type_selector"
      app:layout_constraintBottom_toTopOf="@id/spacer4"/>

    <Spinner
      android:id="@+id/meal_type_selector"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:prompt="@string/select_meal_type"
      android:layout_marginTop="20dp"
      app:layout_constraintTop_toBottomOf="@id/spacer3"
      app:layout_constraintStart_toEndOf="@id/meal_type_selector_label"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toTopOf="@id/spacer4"/>

    <View
      android:id="@+id/spacer4"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:visibility="invisible"
      app:layout_constraintBottom_toTopOf="@id/max_ready_time_slider"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHeight_percent="0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/meal_type_selector" />

    <!-- Max Ready Time -->
    <TextView
      android:id="@+id/max_ready_time"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:text="@string/max_ready_time"
      android:layout_marginTop="20dp"
      app:layout_constraintBottom_toTopOf="@id/spacer5"
      app:layout_constraintEnd_toStartOf="@id/max_ready_time_slider"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/spacer4" />

    <com.google.android.material.slider.Slider
      android:id="@+id/max_ready_time_slider"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:stepSize="10"
      android:value="0"
      android:valueFrom="0"
      android:valueTo="60"
      android:layout_marginTop="20dp"
      app:layout_constraintBottom_toTopOf="@id/spacer5"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/max_ready_time"
      app:layout_constraintTop_toBottomOf="@id/spacer4" />

    <View
      android:id="@+id/spacer5"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:visibility="invisible"
      app:layout_constraintBottom_toTopOf="@id/max_servings_slider"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHeight_percent="0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/max_ready_time_slider" />

    <!-- Max Servings -->
    <TextView
      android:id="@+id/max_servings_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:text="@string/max_servings"
      android:layout_marginTop="20dp"
      app:layout_constraintBottom_toTopOf="@id/spacer6"
      app:layout_constraintEnd_toStartOf="@id/max_servings_slider"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/spacer5" />

    <com.google.android.material.slider.Slider
      android:id="@+id/max_servings_slider"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:stepSize="1"
      android:value="0"
      android:valueFrom="0"
      android:valueTo="20"
      android:layout_marginTop="20dp"
      app:layout_constraintBottom_toTopOf="@id/spacer6"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/max_servings_label"
      app:layout_constraintTop_toBottomOf="@id/spacer5" />

    <View
      android:id="@+id/spacer6"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:visibility="invisible"
      app:layout_constraintBottom_toTopOf="@id/min_servings_slider"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHeight_percent="0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/max_servings_slider" />

    <!-- Min Servings -->
    <TextView
      android:id="@+id/min_servings_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:text="@string/min_servings"
      android:layout_marginTop="20dp"
      app:layout_constraintBottom_toTopOf="@id/spacer7"
      app:layout_constraintEnd_toStartOf="@id/min_servings_slider"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/spacer6" />

    <com.google.android.material.slider.Slider
      android:id="@+id/min_servings_slider"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:stepSize="1"
      android:value="0"
      android:valueFrom="0"
      android:valueTo="20"
      android:layout_marginTop="20dp"
      app:layout_constraintBottom_toTopOf="@id/spacer7"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/min_servings_label"
      app:layout_constraintTop_toBottomOf="@id/spacer6" />

    <View
      android:id="@+id/spacer7"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:visibility="invisible"
      app:layout_constraintBottom_toTopOf="@id/number_of_recipes"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHeight_percent="0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/min_servings_slider" />

    <!-- Number of Recipes -->
    <TextView
      android:id="@+id/number_of_recipes_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/enter_number_of_recipes"
      android:layout_marginEnd="8dp"
      android:layout_marginTop="20dp"
      app:layout_constraintTop_toBottomOf="@id/spacer7"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toStartOf="@id/number_of_recipes"
      app:layout_constraintBottom_toTopOf="@id/spacer8"/>

    <EditText
      android:id="@+id/number_of_recipes"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:autofillHints="Number of Recipes"
      android:hint="@string/number_of_recipes"
      android:inputType="number"
      android:maxLength="3"
      android:layout_marginTop="20dp"
      app:layout_constraintBottom_toTopOf="@id/spacer8"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/number_of_recipes_label"
      app:layout_constraintTop_toBottomOf="@id/spacer7" />

    <View
      android:id="@+id/spacer8"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:visibility="invisible"
      app:layout_constraintBottom_toTopOf="@id/btn_find_recipes"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHeight_percent="0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/number_of_recipes" />

    <!-- Find Recipes Button -->
    <Button
      android:id="@+id/btn_find_recipes"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/find_recipes"
      android:onClick="searchRecipes"
      android:layout_marginTop="30dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/spacer8" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <View
        android:id="@+id/progress_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</FrameLayout>