<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <!-- The TextView to display the group name -->
    <TextView
        android:id="@+id/groupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_6"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/recipesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- The Button to navigate to the recipes service -->
    <Button
        android:id="@+id/recipesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickService"
        android:text="@string/find_recipes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/firebaseAssignmentButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/groupName" />

    <!-- The Button to navigate to the firebase assignment -->
    <Button
        android:id="@+id/firebaseAssignmentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickService"
        android:text="@string/firebase_assignment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/recipesButton"
        app:layout_constraintTop_toBottomOf="@id/groupName" />

</androidx.constraintlayout.widget.ConstraintLayout>